2004/05/19  Brian S. Dean  <bsd@bsdhome.com>

        * main.c:
        * stk500.c: Allow the baud rate to be specified on the command
	line with a new -b switch.  The specified baud rate will
	override the default serial port baud rate for a particular
	programmer.

2004/05/19  Brian S. Dean  <bsd@bsdhome.com>

	* ppi.c: Stub-out the ppi_* functions in ppi.c with empty
	wrappers that simply return an error code in order to build
	successfully on MacOS X.  This allows avrdude to work on MacOS
	X and was tested using a USB<->RS232 cable adapter,
	specifically Keyspan model USA-19HS.

2004-04-23  Joerg Wunsch <j@uriah.heep.sax.de>

	* lists.h, lists.c: Drop LISTSZ and the check for
	it in lcreat().

2004-04-17  Jan-Hinnerk Reichert  <hinni@despammed.com>

	* avr910.c: Hopefully fixed that weird "first byte not
        programmed"-error in a good way (previous fix was not
        working with all firmwares)

2004-02-10  Jan-Hinnerk Reichert  <hinni@despammed.com>

	* avrdude.1, doc/avrdude.texi, doc/TODO:
	Removed the deprecated options from documentation

2004-02-10  Jan-Hinnerk Reichert  <hinni@despammed.com>

	* main.c: Removed deprecated options.

2004-01-28  Jan-Hinnerk Reichert  <hinni@despammed.com>

	* pgm.c, main.c, avr910.c, butterfly.c, stk500.c:
	Changed default for powerup, powerdown and LED-commands
	to do nothing and return OK. Then removed these commands
	from avr910, butterfly and stk500.
	* pgm.c: Fixed wrong type for default_open introduced by
	the cleanup yesterday.


2004-01-29  Jan-Hinnerk Reichert  <hinni@despammed.com>

	* par.c: changed order of port-read/writes in par_txrx().
	This change should increase immunity to delays in the
	programmer-hardware.
	Also did some unrelated cleanup in par_txrx().

2004-01-28  Jan-Hinnerk Reichert  <hinni@despammed.com>

	* pgm.[ch], main.c, par.c, avr910.c, butterfly.c, stk500.c:
	Move save/restore-functionality into open/close.
	* par.c: open/close now saves/restores PPICTRL, too.