@@ -1,3 +1,9 @@
+2004-04-17  Jan-Hinnerk Reichert  <hinni@despammed.com>
+	* avrdude.conf.in: Added support for
+          - tiny13 (contributed by Pawel Moll)
+          - mega48 and mega88 (contributed by Galen Seitz)
+        However, the STK500-code for mega8 remains unchanged.
+
 2004/05/19  Brian S. Dean  <bsd@bsdhome.com>
 
         * main.c:
